Allow overriding protected methods on sfMusic and sfSoundStream

--- a/src/CSFML/Audio/CMakeLists.txt
+++ b/src/CSFML/Audio/CMakeLists.txt
@@ -10,6 +10,7 @@ set(SRC
     ${INCROOT}/Listener.h
     ${SRCROOT}/Music.cpp
     ${SRCROOT}/MusicStruct.hpp
+    ${SRCROOT}/MusicStruct.cpp
     ${INCROOT}/Music.h
     ${SRCROOT}/Sound.cpp
     ${SRCROOT}/SoundStruct.hpp
@@ -27,6 +28,7 @@ set(SRC
     ${INCROOT}/SoundSourceCone.h
     ${INCROOT}/SoundStatus.h
     ${SRCROOT}/SoundStream.cpp
+    ${SRCROOT}/SoundStreamStruct.cpp
     ${SRCROOT}/SoundStreamStruct.hpp
     ${INCROOT}/SoundStream.h
     ${INCROOT}/Types.h
