Update SFML version used in CI scripts

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,6 +13,9 @@ concurrency:
   group: release-${{github.ref}}
   cancel-in-progress: true
 
+env:
+  SFML_VERSION: 3.0.1
+
 jobs:
   windows-x86:
     name: Windows x86
@@ -24,14 +27,14 @@ jobs:
         uses: actions/cache@v4
         with:
           path: ${{ github.workspace }}/mingw32
-          key: 14.2.0posix-19.1.1-12.0.0-ucrt-r2-x86
+          key: 15.1.0posix-13.0.0-ucrt-r2-x86
 
       - name: Install MinGW x86
         if: steps.mingw-x86-cache.outputs.cache-hit != 'true'
         uses: bwoodsend/setup-winlibs-action@v1
         id: winlibs-32
         with:
-          tag: 14.2.0posix-19.1.1-12.0.0-ucrt-r2
+          tag: 15.1.0posix-13.0.0-ucrt-r2
           with_clang: false
           architecture: 32
           destination: ${{ github.workspace }}
@@ -41,7 +44,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           repository: SFML/SFML
-          ref: 3.0.0
+          ref: ${{ env.SFML_VERSION }}
           path: SFML
 
       - name: Checkout CSFML
@@ -111,14 +114,14 @@ jobs:
         uses: actions/cache@v4
         with:
           path: ${{ github.workspace }}/mingw64
-          key: 14.2.0posix-19.1.1-12.0.0-ucrt-r2-x64
+          key: 15.1.0posix-13.0.0-ucrt-r2-x64
 
       - name: Install MinGW x64
         if: steps.mingw-x64-cache.outputs.cache-hit != 'true'
         uses: bwoodsend/setup-winlibs-action@v1
         id: winlibs-64
         with:
-          tag: 14.2.0posix-19.1.1-12.0.0-ucrt-r2
+          tag: 15.1.0posix-13.0.0-ucrt-r2
           with_clang: false
           architecture: 64
           destination: ${{ github.workspace }}
@@ -128,7 +131,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           repository: SFML/SFML
-          ref: 3.0.0
+          ref: ${{ env.SFML_VERSION }}
           path: SFML
 
       - name: Checkout CSFML
@@ -197,7 +200,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           repository: SFML/SFML
-          ref: 3.0.0
+          ref: ${{ env.SFML_VERSION }}
           path: SFML
 
       - name: Checkout CSFML
@@ -260,7 +263,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           repository: SFML/SFML
-          ref: 3.0.0
+          ref: ${{ env.SFML_VERSION }}
           path: SFML
 
       - name: Checkout CSFML
