--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,7 @@ concurrency:
   cancel-in-progress: true
 
 env:
-  SFML_VERSION: 3.0.1
+  SFML_VERSION: 3.0.2
 
 defaults:
   run:
@@ -109,6 +109,12 @@ jobs:
     runs-on: macos-14
 
     steps:
+    - name: Get CMake and Ninja
+      uses: lukka/get-cmake@latest
+      with:
+        cmakeVersion: ${{ runner.os == 'Windows' && '3.25' || '3.22' }}
+        ninjaVersion: latest
+
     - name: Install Dependencies
       run: |
         brew update
@@ -144,6 +150,12 @@ jobs:
     runs-on: macos-14
 
     steps:
+    - name: Get CMake and Ninja
+      uses: lukka/get-cmake@latest
+      with:
+        cmakeVersion: ${{ runner.os == 'Windows' && '3.25' || '3.22' }}
+        ninjaVersion: latest
+
     - name: Install Doxygen
       run: |
         brew update
